[package]
name = "sifli_sdk_wrapper"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "sdk.py.exe, wrapper tool to invoke sdk.py on Windows"
repository = "https://github.com/OpenSiFli/sifli_sdk_wrapper"
homepage = "https://github.com/OpenSiFli/sifli_sdk_wrapper"
readme = "README.md"
documentation = "https://docs.rs/sifli_sdk_wrapper"

[[bin]]
name = "sdk_py"
path = "src/main.rs"

[dependencies]
ctrlc = "3.4.5"